Agregando la conversion de dolar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
         <select id="fromCurrency" name="fromCurrency">
             <option value="BRL">Real Brasileño (BRL)</option>
             <option value="PEN">Sol Peruano (PEN)</option>
+            <option value="USD">Dólar Americano (USD)</option>
         </select>
     </div>
     <div>
@@ -19,6 +20,7 @@
         <select id="toCurrency" name="toCurrency">
             <option value="BRL">Real Brasileño (BRL)</option>
             <option value="PEN">Sol Peruano (PEN)</option>
+            <option value="USD">Dólar Americano (USD)</option>
         </select>
     </div>
     <div>
